# FrogMPEG

./: .gitignore  LICENSE  README.md  config.example.json  config.py  frogmpeg-gui.bat  frogmpeg.bat  pyproject.toml  requirements.txt
docs/: CONFIGURATION.md  INSTALLATION.md  USAGE.md
src/: __init__.py  __main__.py  __version__.py  cli.py  converter.py  gui.py
