[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frogmpeg"
version = "0.1.0"
description = "Frog-themed FFmpeg image sequence converter."
authors = [{ name = "FrogMPEG Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.0.0",
    "typer>=0.12.0",
]

[project.scripts]
frogmpeg = "frogmpeg.cli:run"

[tool.setuptools]
packages = ["frogmpeg"]
package-dir = {"frogmpeg" = "src"}

